--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -15,6 +15,10 @@ categories:
 
 ## Обоснование Предлагаемой Работы
 
+В русскоязычном интернете можно найти несколько работ посвящённых использованию
+русского языка в информатике. Эти работы либо технические, либо фокусируются на
+том, что Русский язык каким-то образом превосходит Английский.
+
 Сразу оговорюсь о моём понимании споров о технических или познавательных
 преимуществах русского языка по-сравнению с другими естественными языками. Мой
 родной язык - Русский, второй язык - Английский. В жизни и в профессиональной
@@ -38,7 +42,7 @@ categories:
 1. Возможность применения особенностей русского языка, культурных образов и
    построения предложений при создании новых языков программирования.
 1. Самобытное развитие русского языка в области информационных технологий должно
-   обеспечить более интуитивную терминологию чем принятый сейчас перевод, или
+   обеспечить более образную терминологию чем принятый сейчас перевод, или
    транслитерация терминов с иностранного языка.
 1. Уникальные информационные технологии высокого качества созданные на основе
    русского языка будут способствовать распространению русского языка среди
@@ -48,7 +52,10 @@ categories:
 Спорные преимущества:
 
 1. Создание новых алгоритмов и моделей данных свойственных русскому мышлению.
-1. Предотвращение утечки кадров.
 1. Создание единой государственной базы открытых программ, а также
    гос-финансирование авторов и организаций, которые эту базу сопровождают и
    дополняют.
+1. Предотвращение утечки кадров.
+
+Утечку кадров может предотвратить достойная оплата труда, справедливое отношение
+руководителей и приемлемые условия жизни семьи.
