--- a/pages/blog/artizanya/2023-02-03.index.en.mdx
+++ b/pages/blog/artizanya/2023-02-03.index.en.mdx
@@ -5,28 +5,29 @@ authors:
 draft: true
 datePublished: '2024-03-03'
 # dateUpdated: '2024-03-03'
-description: Artizanya magpie
+description: Collection of Thoughts on Artizanya
 categories:
   - artizanya
 ---
 
 ## Artizanya: Cafe in the Future
 
-Артизания - маленькое семейное кафе из второй половины 22 века, где
-производственные силы принадлежат индивидуальным мастерам-артизанам, а большие
-корпорации занимаются фундаментальными исследованиями во благо всего
-человечества. Результаты фундаментальных исследований находятся в публичном
-доступе для поиска их интересных применений артизанами.
+Artizanya is a small family cafe from the second half of the 22<sup>nd</sup>
+century, where the means of production belong to individual artizans, and large
+corporations are engaged in fundamental research for the benefit of all
+mankind. The results of fundamental research are publicly available for artisans
+to search for their interesting applications.
 
-В кафе всё ещё работают 3D принтеры из начала 21 века. Можно своими глазами
-увидеть как зарождалось движение артизан вначале своего пути и выпить вкусный
-кофе приготовленный по-старым рецептам - без синтезатора материи.
+In the cafe, 3D printers from the beginning of the 21st century are still
+working. You can see with your own eyes how the artisan movement was born at the
+beginning of its journey and drink delicious coffee made according to old
+recipes - without a matter synthesizer.
 
-За десятилетия в кафе скопилось много старых газет и заметок посетителей. Новое
-поколение владельцев кафе постепенно организует старые новости в архив и
-выкладывает их на свой сайт в раздел новостей...
+Over the decades, many old newspapers and visitor notes have accumulated in the
+cafe. The new generation of cafe owners gradually organizes old news into an
+archive and posts them on their website in the news section...
 
-## Artizanya Platform and Community
+## Artizanya: Platform and Community
 
 Artizanya is the first Distributed Fabrication (DFab) platform!
 
