--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -13,11 +13,17 @@ categories:
   - analytics
 ---
 
+## Терминология
+
+РИТ - Русскоязычные Информационные Технологии, или Информационные Технологии не
+Основе Русского Языка.
+
 ## Обоснование Предлагаемой Работы
 
 В русскоязычном интернете можно найти несколько работ посвящённых использованию
-русского языка в информатике. Эти работы либо технические, либо фокусируются на
-том, что Русский язык каким-то образом превосходит Английский.
+русского языка в информатике. Эти работы можно условно разделить на
+исторические, технические, и с фокусом на то, что Русский язык каким-то образом
+превосходит Английский.
 
 Сразу оговорюсь о моём понимании споров о технических или познавательных
 преимуществах русского языка по-сравнению с другими естественными языками. Мой
@@ -48,8 +54,9 @@ categories:
    русского языка будут способствовать распространению русского языка среди
    иностранных специалистов.
 
-
-Спорные преимущества:
+Существуют определённые стереотипы связанные с русским сознанием. Я не берусь
+анализировать насколько эти стереотипы соответствуют реальности. Но, если
+предположить их реальность, можно выделить следующие "спорные" преимущества:
 
 1. Создание новых алгоритмов и моделей данных свойственных русскому мышлению.
 1. Создание единой государственной базы открытых программ, а также
@@ -58,4 +65,10 @@ categories:
 1. Предотвращение утечки кадров.
 
 Утечку кадров может предотвратить достойная оплата труда, справедливое отношение
-руководителей и приемлемые условия жизни семьи.
+руководителей и приемлемые условия жизни семьи трудящегося.
+
+Для моих знакомых англоязычных специалистов является загадкой почему не
+создаются новые языки программирования на не-англоязычной основе. Многие
+согласны с гипотезой о том, что использование других естественных языков в
+основе языков программирования привнесёт в дисциплину программирования новые
+идеи и способы мышления, которые не свойственны англоязычному сознанию.
