--- a/pages/notes/python-pyenv-and-poetry/2023-04-27.index.en.mdx
+++ b/pages/notes/python-pyenv-and-poetry/2023-04-27.index.en.mdx
@@ -10,10 +10,10 @@ description:
 
 ### Automatic Installation via pyenv-installer
 
-```bash
-# Use PYENV_GIT_TAG to install specific pyenv-installer version e.g.:
-# export PYENV_GIT_TAG=v2.3.23
-curl https://pyenv.run | bash
+```shell
+$ # Use PYENV_GIT_TAG to install specific pyenv-installer version e.g.:
+$ # export PYENV_GIT_TAG=v2.3.23
+$ curl https://pyenv.run | bash
 ```
 
 #### References
@@ -48,10 +48,10 @@ eval "$(pyenv init -)"
 
 ### Ubuntu 22.04 LTS
 
-```bash
-sudo apt install make build-essential tk-dev libssl-dev libreadline-dev \
-                 libncurses-dev libbz2-dev zlib1g-dev libsqlite3-dev \
-                 libffi-dev liblzma-dev libxml2-dev libxmlsec1-dev xz-utils curl
+```shell
+# apt install make build-essential tk-dev libssl-dev libreadline-dev \
+              libncurses-dev libbz2-dev zlib1g-dev libsqlite3-dev \
+              libffi-dev liblzma-dev libxml2-dev libxmlsec1-dev xz-utils curl
 ```
 
 #### References
@@ -62,27 +62,27 @@ sudo apt install make build-essential tk-dev libssl-dev libreadline-dev \
 
 To list available Python versions:
 
-```bash
-pyenv install -l
+```shell
+$ pyenv install -l
 ```
 
 To install particular Python `<version>`:
 
-```bash
-pyenv install <version>
+```shell
+$ pyenv install <version>
 ```
 
 To select current Python `<version>`:
 
-```bash
-# global for current user account
-pyenv global <version>
+```shell
+$ # global for current user account
+$ pyenv global <version>
 
-# current shell session
-pyenv shell <version>
+$ # current shell session
+$ pyenv shell <version>
 
-# current directory or its subdirectories
-pyenv local <version>
+$ # current directory or its subdirectories
+$ pyenv local <version>
 ```
 
 #### References
@@ -94,8 +94,8 @@ pyenv local <version>
 
 ### Automatic User Account Installation
 
-```bash
-curl -sSL https://install.python-poetry.org | python -
+```shell
+$ curl -sSL https://install.python-poetry.org | python -
 ```
 
 Python Poetry automatic installation procedure had multiple
@@ -107,39 +107,39 @@ gets deprecated once again.
 
 Install poetry in a dedicated `venv`:
 
-```bash
-VENV_PATH=~/.local/share/pypoetry/venv
-python -m venv $VENV_PATH
-$VENV_PATH/bin/pip install -U pip setuptools
-$VENV_PATH/bin/pip install poetry
+```shell
+$ VENV_PATH=~/.local/share/pypoetry/venv
+$ python -m venv $VENV_PATH
+$ $VENV_PATH/bin/pip install -U pip setuptools
+$ $VENV_PATH/bin/pip install poetry
 ```
 
 Symlink installed `poetry` to a local `bin` directory:
 
-```bash
-ln -vs $VENV_PATH/bin/poetry ~/.local/bin
+```shell
+$ ln -vs $VENV_PATH/bin/poetry ~/.local/bin
 ```
 
 Test new `poerty` installation:
 
-```bash
-poetry --version
-# expected output example:
-# Poetry (version 1.4.2)
+```shell
+$ poetry --version
+$ # expected output example:
+$ # Poetry (version 1.4.2)
 ```
 
 Enable `bash` tab completion:
 
-```bash
-poetry completions bash >> ~/.bash_completion
+```shell
+$ poetry completions bash >> ~/.bash_completion
 ```
 
 ### Poetry Python Version
 
 Set Poetry to use specific Python `<version>`:
 
-```bash
-poetry env use <version>
+```shell
+$ poetry env use <version>
 ```
 
 ### Poetry Plugin up and Package Versions
@@ -147,31 +147,31 @@ poetry env use <version>
 `up` plugin updates dependencies and bumps their versions in `pyproject.toml`
 file. It works similar to `yarn up` command in Node.js. Install plugin:
 
-```bash
-poetry self add poetry-plugin-up
+```shell
+$ poetry self add poetry-plugin-up
 ```
 
 Update dependencies to latest available compatible versions:
 
-```bash
-poetry up --latest
+```shell
+$ poetry up --latest
 ```
 
 Display the current and the latest version of the installed packages:
 
-```bash
-poetry show --latest
+```shell
+$ poetry show --latest
 ```
 
 Display outdated packages only:
 
-```bash
-poetry show --outdated
+```shell
+$ poetry show --outdated
 ```
 Update 	`<package>` to the latest available version:
 
-```bash
-poetry add <package>@latest
+```shell
+$ poetry add <package>@latest
 ```
 
 ## poetry venv and VS Code
@@ -182,8 +182,8 @@ Many (all?) VS Code extensions, by default, look for project Python virtual
 environment in `<project-dir>/.venv`. To install Python virtual environment in
 project directory use the following command:
 
-```bash
-poetry config virtualenvs.in-project true --local
+```shell
+$ poetry config virtualenvs.in-project true --local
 ```
 
 This command should add the following content to `<project-dir>/poetry.toml` file:
@@ -202,8 +202,8 @@ By default, poetry installs project virtual environment in
 `<user-home>/.cache/pypoetry/virtualenvs`. To get current `<project-venv>` use
 the following command:
 
-```bash
-poetry env info -p
+```shell
+$ poetry env info -p
 ```
 
 To configure VS Code extensions to use current `<project-venv>` add the
