--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -20,6 +20,12 @@ categories:
 
 ## Обоснование Предлагаемой Работы
 
+"Информационные Технологии - ИТ" - привычный современному человеку термин, не
+совсем точно отражает то явление которое он символизирует. Изначально раздел
+математики и электроники, ИТ постепенно стал частью человеческой культуры,
+языка, и средством общения, а также средством межкультурной борьбы за
+привлечение новых умов и идей.
+
 В русскоязычном интернете можно найти несколько работ посвящённых использованию
 русского языка в информатике. Эти работы можно условно разделить на
 исторические, технические, и с фокусом на то, что Русский язык каким-то образом
