--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -15,16 +15,54 @@ categories:
 
 ## Терминология
 
-РИТ - Русскоязычные Информационные Технологии, или Информационные Технологии не
+АИТ - Англоязычные Информационные Технологии, или Информационные Технологии на
+Основе Английского Языка.
+
+РИТ - Русскоязычные Информационные Технологии, или Информационные Технологии на
 Основе Русского Языка.
 
-## Обоснование Предлагаемой Работы
+## Выбор основного языка ИТ
 
-"Информационные Технологии - ИТ" - привычный современному человеку термин, не
+“Информационные Технологии - ИТ” - привычный современному человеку термин, не
 совсем точно отражает то явление которое он символизирует. Изначально раздел
 математики и электроники, ИТ постепенно стал частью человеческой культуры,
-языка, и средством общения, а также средством межкультурной борьбы за
-привлечение новых умов и идей.
+языка, и средством общения, а также инструментом межкультурной борьбы за
+привлечение выдающихся людей и инновационных идей.
+
+Исторически сложилось что основным, и в большой степени единственным, языком
+современных информационных технологий в мире является английский. Повсеместное
+использование ИТ на основе английского языка имеет свои преимущества. Например
+использование исходных кодов программ написанных иностранными разработчиками,
+или участие в разработках проводимых интернациональными коллективами, где
+рабочим языком является английский. Кроме того большинство современных ресурсов
+и документации доступны только на английском языке.
+
+С другой стороны, АИТ имеет и свои недостатки с точки зрения человека, для
+которого английский на является родным языком. Во первых для работы с АИТ на
+любом уровне - от микросхем, до системных прошивок, до ядер операционных систем,
+до прикладных программ - требуется свободное владение английским языком. То есть
+невозможно осуществление профессиональной деятельности используя родной язык. Во
+вторых невозможно использовать идиомы, культурные образы и особенности родного
+языка для наиболее естественного и лаконичного описания алгоритмов и структур
+данных.
+
+Многие специалисты в различных областях ИТ с которыми мне доводилось работать,
+считают что в целом, информационные технологии теряют от использования
+единственного основного языка. Разные естественные языки имеют свои правила
+выражения идей и мыслей. Носители этих языков по-разному мыслят и могут
+приходить к таким идеям, выражение которых на других языках будет громоздким и
+сложным. Использование ИТ на не-английской основе способно обогатить
+дисциплину новыми идеями и подходами к решению задач.
+
+Многоязычие в ИТ особенно актуально в современном глобализированном мире, где
+технологии используются людьми из разных культур и с разными
+языками. Возможность использовать и понимать ИТ на разных языках может
+способствовать более широкому участию и инновациям.
+
+Таким образом, существует объективная потребность в создании Русскоязычных
+Информационных Технологий - РИТ.
+
+## Обоснование Предлагаемой Работы
 
 В русскоязычном интернете можно найти несколько работ посвящённых использованию
 русского языка в информатике. Эти работы можно условно разделить на
@@ -72,9 +110,3 @@ categories:
 
 Утечку кадров может предотвратить достойная оплата труда, справедливое отношение
 руководителей и приемлемые условия жизни семьи трудящегося.
-
-Для моих знакомых англоязычных специалистов является загадкой почему не
-создаются новые языки программирования на не-англоязычной основе. Многие
-согласны с гипотезой о том, что использование других естественных языков в
-основе языков программирования привнесёт в дисциплину программирования новые
-идеи и способы мышления, которые не свойственны англоязычному сознанию.
