--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -46,13 +46,13 @@ categories:
 языка для наиболее естественного и лаконичного описания алгоритмов и структур
 данных.
 
-Многие специалисты в различных областях ИТ с которыми мне доводилось работать,
-считают что в целом, информационные технологии теряют от использования
+Многие специалисты в различных областях ИТ, с которыми мне доводилось работать,
+считают, что в целом информационные технологии теряют от использования
 единственного основного языка. Разные естественные языки имеют свои правила
 выражения идей и мыслей. Носители этих языков по-разному мыслят и могут
 приходить к таким идеям, выражение которых на других языках будет громоздким и
-сложным. Использование ИТ на не-английской основе способно обогатить
-дисциплину новыми идеями и подходами к решению задач.
+сложным. Использование ИТ на не-английской основе способно обогатить дисциплину
+новыми идеями и подходами к решению задач.
 
 Многоязычие в ИТ особенно актуально в современном глобализированном мире, где
 технологии используются людьми из разных культур и с разными
