--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -15,6 +15,8 @@ categories:
 
 ## Терминология
 
+ИТ - Информационные Технологии.
+
 АИТ - Англоязычные Информационные Технологии, или Информационные Технологии на
 Основе Английского Языка.
 
@@ -27,7 +29,7 @@ categories:
 совсем точно отражает то явление которое он символизирует. Изначально раздел
 математики и электроники, ИТ постепенно стал частью человеческой культуры,
 языка, и средством общения, а также инструментом межкультурной борьбы за
-привлечение выдающихся людей и инновационных идей.
+привлечение талантливых людей и инновационных идей.
 
 Исторически сложилось что основным, и в большой степени единственным, языком
 современных информационных технологий в мире является английский. Повсеместное
@@ -38,7 +40,7 @@ categories:
 и документации доступны только на английском языке.
 
 С другой стороны, АИТ имеет и свои недостатки с точки зрения человека, для
-которого английский на является родным языком. Во первых для работы с АИТ на
+которого английский не является родным языком. Во первых для работы с АИТ на
 любом уровне - от микросхем, до системных прошивок, до ядер операционных систем,
 до прикладных программ - требуется свободное владение английским языком. То есть
 невозможно осуществление профессиональной деятельности используя родной язык. Во
@@ -99,7 +101,7 @@ categories:
    иностранных специалистов.
 
 Существуют определённые стереотипы связанные с русским сознанием. Я не берусь
-анализировать насколько эти стереотипы соответствуют реальности. Но, если
+оценивать насколько эти стереотипы соответствуют реальности. Но, если
 предположить их реальность, можно выделить следующие "спорные" преимущества:
 
 1. Создание новых алгоритмов и моделей данных свойственных русскому мышлению.
