--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -100,15 +100,27 @@ categories:
    русского языка будут способствовать распространению русского языка среди
    иностранных специалистов.
 
-Существуют определённые стереотипы связанные с русским сознанием. Я не берусь
-оценивать насколько эти стереотипы соответствуют реальности. Но, если
-предположить их реальность, можно выделить следующие "спорные" преимущества:
+Существуют определённые стереотипы связанные с русским разумом. Например,
+русский разумом более склонен к теории и глубоким логическим обоснованиям. Ему
+не достаточно эмпирических доказательств или работающих практических
+применений. Русский разумом более "человеко-ориентированный". Он стремиться к
+справедливому обществу равных возможностей, открытости знаний и к единым
+общедоступным и эффективным стандартам. Также, русский разум более мобильный,
+открытый к новому и способен быстро адаптироваться в иностранных культурах.
 
-1. Создание новых алгоритмов и моделей данных свойственных русскому мышлению.
-1. Создание единой государственной базы открытых программ, а также
+Я не берусь оценивать насколько эти стереотипы соответствуют реальности. Но,
+если предположить их реальность, можно выделить следующие "спорные"
+преимущества РИТ:
+
+1. Создание новых алгоритмов и моделей данных свойственных русскому разуму.
+1. Создание единой государственной базы открытых программ, а также единое
    гос-финансирование авторов и организаций, которые эту базу сопровождают и
    дополняют.
-1. Предотвращение утечки кадров.
+1. Замедление утечки кадров, так как навыки использования РИТ будут в большей
+   степени востребованы в русскоязычном сообществе.
 
-Утечку кадров может предотвратить достойная оплата труда, справедливое отношение
-руководителей и приемлемые условия жизни семьи трудящегося.
+Для предотвращения утечки кадров, а также привлечения талантливых людей из
+других культур, необходима достойная оплата труда, высокий уровень
+руководителей, справедливое отношение и приемлемые условия жизни семей
+трудящихся специалистов. Это, конечно, общие правила для специалистов из любой
+области деятельности - не только ИТ.
