Changing gray matter draft from bool to 'public' | 'private'

--- a/pages/blog/artizanya/2023-02-03.index.en.mdx
+++ b/pages/blog/artizanya/2023-02-03.index.en.mdx
@@ -2,7 +2,7 @@
 title: Artizanya
 authors:
   - Victor Rybynok
-draft: true
+draft: 'private'
 datePublished: '2024-03-03'
 # dateUpdated: '2024-03-03'
 description: Collection of Thoughts on Artizanya
