--- a/pages/blog/artizanya/2023-02-03.index.ru.mdx
+++ b/pages/blog/artizanya/2023-02-03.index.ru.mdx
@@ -2,7 +2,7 @@
 title: Артизания
 authors:
   - Victor Rybynok
-draft: true
+draft: 'private'
 datePublished: '2024-03-03'
 # dateUpdated: '2024-03-03'
 description: Сборник мыслей об Артизании
