--- a/pages/blog/unbound-dns/2023-12-27.index.en.mdx
+++ b/pages/blog/unbound-dns/2023-12-27.index.en.mdx
@@ -2,7 +2,7 @@
 title: Unbound DNS
 authors:
   - Victor Rybynok
-draft: true
+draft: 'private'
 datePublished: '2023-12-26'
 description:
   Unbound DNS configuration guide
