--- a/pages/blog/how-to-use-css-variables/2023-01-11.index.en.mdx
+++ b/pages/blog/how-to-use-css-variables/2023-01-11.index.en.mdx
@@ -2,7 +2,7 @@
 title: How to use CSS variables
 authors:
   - Victor Rybynok
-draft: true
+draft: 'private'
 datePublished: '2023-02-01'
 dateUpdated: '2023-02-08'
 description: This post documents how this site came into existence
