--- a/pages/blog/multi-language-spelling-in-emacs/2023-03-01.index.en.mdx
+++ b/pages/blog/multi-language-spelling-in-emacs/2023-03-01.index.en.mdx
@@ -2,7 +2,7 @@
 title: Multi-language spelling in Emacs
 authors:
   - Victor Rybynok
-draft: true
+draft: 'private'
 datePublished: '2023-03-05'
 # dateUpdated: '2023-02-20'
 description: Multi-language spelling in Emacs.
