--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -2,7 +2,7 @@
 title: Информационные Технологии на Основе Русского Языка
 authors:
   - Виктор Рыбынок
-draft: true
+draft: 'public'
 datePublished: '2024-03-03'
 # dateUpdated: '2024-03-03'
 description:
@@ -51,7 +51,7 @@ categories:
 Многие специалисты в различных областях ИТ, с которыми мне доводилось работать,
 считают, что в целом информационные технологии теряют от использования
 единственного основного языка. Разные естественные языки имеют свои правила
-выражения идей и мыслей. Носители этих языков по-разному мыслят и могут
+выражения идей и образов. Носители этих языков по-разному мыслят и могут
 приходить к таким идеям, выражение которых на других языках будет громоздким и
 сложным. Использование ИТ на не-английской основе способно обогатить дисциплину
 новыми идеями и подходами к решению задач.
@@ -88,7 +88,7 @@ categories:
 языком:
 
 1. Нет необходимости изучать иностранный язык для обмена профессиональными
-   знаниями, приобретения новых знаний и освоения новых навыков.
+   навыками, приобретения новых знаний и освоения новых умений.
 1. Более прямое и лаконичное выражение идей и алгоритмов для людей мыслящих
    по-русски.
 1. Возможность применения особенностей русского языка, культурных образов и
@@ -112,8 +112,9 @@ categories:
 если предположить их реальность, можно выделить следующие "спорные"
 преимущества РИТ:
 
-1. Создание новых алгоритмов и моделей данных свойственных русскому разуму.
-1. Создание единой государственной базы открытых программ, а также единое
+1. Создание новых алгоритмов и моделей данных свойственных, а значит более
+   понятных русскому разуму.
+1. Создание единой государственной базы открытых программ, а также
    гос-финансирование авторов и организаций, которые эту базу сопровождают и
    дополняют.
 1. Замедление утечки кадров, так как навыки использования РИТ будут в большей
