--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -25,7 +25,7 @@ categories:
 
 ## Выбор основного языка ИТ
 
-“Информационные Технологии - ИТ” - привычный современному человеку термин, не
+“Информационные Технологии (ИТ)” - привычный современному человеку термин, не
 совсем точно отражает то явление которое он символизирует. Изначально раздел
 математики и электроники, ИТ постепенно стал частью человеческой культуры,
 языка, и средством общения, а также инструментом межкультурной борьбы за
@@ -39,14 +39,14 @@ categories:
 рабочим языком является английский. Кроме того большинство современных ресурсов
 и документации доступны только на английском языке.
 
-С другой стороны, АИТ имеет и свои недостатки с точки зрения человека, для
-которого английский не является родным языком. Во первых для работы с АИТ на
-любом уровне - от микросхем, до системных прошивок, до ядер операционных систем,
-до прикладных программ - требуется свободное владение английским языком. То есть
-невозможно осуществление профессиональной деятельности используя родной язык. Во
-вторых невозможно использовать идиомы, культурные образы и особенности родного
-языка для наиболее естественного и лаконичного описания алгоритмов и структур
-данных.
+С другой стороны, Англоязычные Информационные Технологии (АИТ) имеют и свои
+недостатки с точки зрения человека, для которого английский не является родным
+языком. Во первых для работы с АИТ на любом уровне - от микросхем, до системных
+прошивок, до ядер операционных систем, до прикладных программ - требуется
+свободное владение английским языком. То есть невозможно осуществление
+профессиональной деятельности используя родной язык. Во вторых невозможно
+использовать идиомы, культурные образы и особенности родного языка для наиболее
+естественного и лаконичного описания алгоритмов и структур данных.
 
 Многие специалисты в различных областях ИТ, с которыми мне доводилось работать,
 считают, что в целом информационные технологии теряют от использования
@@ -68,27 +68,27 @@ categories:
 
 В русскоязычном интернете можно найти несколько работ посвящённых использованию
 русского языка в информатике. Эти работы можно условно разделить на
-исторические, технические, и с фокусом на то, что Русский язык каким-то образом
+исторические, технические, и с фокусом на то, что русский язык каким-то образом
 превосходит Английский.
 
 Сразу оговорюсь о моём понимании споров о технических или познавательных
 преимуществах русского языка по-сравнению с другими естественными языками. Мой
-родной язык - Русский, второй язык - Английский. В жизни и в профессиональной
-деятельности я использую и Русский и Английский примерно в равном соотношении.
+родной язык - русский, второй язык - английский. В жизни и в профессиональной
+деятельности я использую и русский и английский примерно в равном соотношении.
 
 Никаких технических или познавательных преимуществ использования одного языка
-по-отношению к другому я не встречал. При этом, мне удобнее использовать Русский
+по-отношению к другому я не встречал. При этом, мне удобнее использовать русский
 язык, так как он глубже связан с моим мышлением и моим способом выражения
-мыслей. То есть, для меня Русский язык обладает преимуществом по-отношению к
+мыслей. То есть, для меня русский язык обладает преимуществом по-отношению к
 Английскому или другим языкам, но это преимущество лежит вне технической или
 познавательной сфер.
 
 Позволю себе распространить своё видение преимуществ информационных технологий
-на основе русского языка на всех людей, для которых Русский является родным
+на основе русского языка на всех людей, для которых русский является родным
 языком:
 
 1. Нет необходимости изучать иностранный язык для обмена профессиональными
-   навыками, приобретения новых знаний и освоения новых умений.
+   навыками, приобретения новых знаний и обретения новых умений.
 1. Более прямое и лаконичное выражение идей и алгоритмов для людей мыслящих
    по-русски.
 1. Возможность применения особенностей русского языка, культурных образов и
@@ -103,25 +103,43 @@ categories:
 Существуют определённые стереотипы связанные с русским разумом. Например,
 русский разумом более склонен к теории и глубоким логическим обоснованиям. Ему
 не достаточно эмпирических доказательств или работающих практических
-применений. Русский разумом более "человеко-ориентированный". Он стремиться к
-справедливому обществу равных возможностей, открытости знаний и к единым
-общедоступным и эффективным стандартам. Также, русский разум более мобильный,
-открытый к новому и способен быстро адаптироваться в иностранных культурах.
+применений. Русский разум более "человеко-ориентированный". Он стремиться к
+справедливому обществу, открытости знаний и к единым общедоступным и эффективным
+стандартам. Также, русский разум более мобильный, открытый к новому и способен
+быстро адаптироваться в иностранных культурах.
 
 Я не берусь оценивать насколько эти стереотипы соответствуют реальности. Но,
-если предположить их реальность, можно выделить следующие "спорные"
+если предположить их вероятность, то можно выделить следующие "спорные"
 преимущества РИТ:
 
 1. Создание новых алгоритмов и моделей данных свойственных, а значит более
-   понятных русскому разуму.
+   понятных, русскому разуму.
 1. Создание единой государственной базы открытых программ, а также
    гос-финансирование авторов и организаций, которые эту базу сопровождают и
    дополняют.
 1. Замедление утечки кадров, так как навыки использования РИТ будут в большей
    степени востребованы в русскоязычном сообществе.
 
-Для предотвращения утечки кадров, а также привлечения талантливых людей из
-других культур, необходима достойная оплата труда, высокий уровень
-руководителей, справедливое отношение и приемлемые условия жизни семей
-трудящихся специалистов. Это, конечно, общие правила для специалистов из любой
-области деятельности - не только ИТ.
+Гипотеза о возможности создания новых алгоритмов и моделей данных на основе
+русского мышления требует экспериментального и практического подтверждения. С
+научной точки зрения, подтверждение или опровержение этой гипотезы само по себе
+может являться достаточным основанием для проведения исследований в области
+языков программирования на основе русского языка.
+
+Советские затем СНГ и российские стандарты ГОСТ с момента своего появления
+являлись более всеобъемлющими и более востребованными в промышленности, чем
+множество схожих иностранных инициатив по-стандартизации. Отчасти это можно
+объяснить плановой советской экономикой, когда у компаний не было побуждений
+внедрения своих стандартов для завоевания доминирующего положения на
+рынке. Единая система стандартов в разных условиях может быть как преимуществом,
+так и недостатком. В случае создания единой базы открытых программ - языков
+программирования, инструментов разработки, библиотек алгоритмов и прикладных
+систем - склонность к универсальной стандартизации может стать фундаментальным
+преимуществом РИТ.
+
+Языковой барьер никогда не являлся абсолютной преградой для эмиграции людей
+между странами и культурами. Для предотвращения утечки кадров, а также
+привлечения талантливых людей из других культур, необходима достойная оплата
+труда, высокий уровень руководителей, справедливое отношение и приемлемые
+условия жизни для семей трудящихся специалистов. Это, конечно, общие правила для
+специалистов из любой области деятельности - не только ИТ.
