--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -89,20 +89,20 @@ categories:
 
 1. Нет необходимости изучать иностранный язык для обмена профессиональными
    навыками, приобретения новых знаний и обретения новых умений.
-1. Более прямое и лаконичное выражение идей и алгоритмов для людей мыслящих
+2. Более прямое и лаконичное выражение идей и алгоритмов для людей мыслящих
    по-русски.
-1. Возможность применения особенностей русского языка, культурных образов и
+3. Возможность применения особенностей русского языка, культурных образов и
    построения предложений при создании новых языков программирования.
-1. Самобытное развитие русского языка в области информационных технологий должно
+4. Самобытное развитие русского языка в области информационных технологий должно
    обеспечить более образную терминологию чем принятый сейчас перевод, или
    транслитерация терминов с иностранного языка.
-1. Уникальные информационные технологии высокого качества созданные на основе
+5. Уникальные информационные технологии высокого качества созданные на основе
    русского языка будут способствовать распространению русского языка среди
    иностранных специалистов.
 
 Существуют определённые стереотипы связанные с русским разумом. Например,
-русский разумом более склонен к теории и глубоким логическим обоснованиям. Ему
-не достаточно эмпирических доказательств или работающих практических
+русский разум более склонен к теории и глубоким логическим обоснованиям. Ему не
+достаточно эмпирических доказательств или работающих практических
 применений. Русский разум более "человеко-ориентированный". Он стремиться к
 справедливому обществу, открытости знаний и к единым общедоступным и эффективным
 стандартам. Также, русский разум более мобильный, открытый к новому и способен
@@ -112,34 +112,38 @@ categories:
 если предположить их вероятность, то можно выделить следующие "спорные"
 преимущества РИТ:
 
-1. Создание новых алгоритмов и моделей данных свойственных, а значит более
+6. Создание новых алгоритмов и моделей данных свойственных, а значит более
    понятных, русскому разуму.
-1. Создание единой государственной базы открытых программ, а также
+7. Создание единой государственной базы открытых программ, а также
    гос-финансирование авторов и организаций, которые эту базу сопровождают и
    дополняют.
-1. Замедление утечки кадров, так как навыки использования РИТ будут в большей
+8. Замедление утечки кадров, так как навыки использования РИТ будут в большей
    степени востребованы в русскоязычном сообществе.
 
-Гипотеза о возможности создания новых алгоритмов и моделей данных на основе
-русского мышления требует экспериментального и практического подтверждения. С
-научной точки зрения, подтверждение или опровержение этой гипотезы само по себе
-может являться достаточным основанием для проведения исследований в области
-языков программирования на основе русского языка.
+Спорное преимущество 6 - гипотеза о возможности создания новых алгоритмов и
+моделей данных на основе русского мышления требует экспериментального и
+практического подтверждения. С научной точки зрения, подтверждение или
+опровержение этой гипотезы само по себе может являться достаточным основанием
+для проведения исследований в области языков программирования на основе русского
+языка.
 
-Советские затем СНГ и российские стандарты ГОСТ с момента своего появления
+Спорное преимущество 7 связанно с особенностями российской системы стандартов.
+Советские, а затем СНГ и российские стандарты ГОСТ с момента своего появления
 являлись более всеобъемлющими и более востребованными в промышленности, чем
-множество схожих иностранных инициатив по-стандартизации. Отчасти это можно
+множество схожих иностранных инициатив по стандартизации. Отчасти это можно
 объяснить плановой советской экономикой, когда у компаний не было побуждений
 внедрения своих стандартов для завоевания доминирующего положения на
 рынке. Единая система стандартов в разных условиях может быть как преимуществом,
-так и недостатком. В случае создания единой базы открытых программ - языков
+так и недостатком. В случае создания стандартной базы открытых программ - языков
 программирования, инструментов разработки, библиотек алгоритмов и прикладных
-систем - склонность к универсальной стандартизации может стать фундаментальным
-преимуществом РИТ.
+систем - склонность к русского разума к универсальной стандартизации может стать
+фундаментальным преимуществом РИТ.
 
-Языковой барьер никогда не являлся абсолютной преградой для эмиграции людей
-между странами и культурами. Для предотвращения утечки кадров, а также
-привлечения талантливых людей из других культур, необходима достойная оплата
-труда, высокий уровень руководителей, справедливое отношение и приемлемые
-условия жизни для семей трудящихся специалистов. Это, конечно, общие правила для
-специалистов из любой области деятельности - не только ИТ.
+Спорное преимущество 8 связанно с языковым барьером. Но тут нужно отметить, что
+языковой барьер как таковой никогда не являлся непреодолимой преградой для
+эмиграции людей между странами и культурами. Поэтому, помимо РИТ, для
+предотвращения утечки кадров, а также привлечения талантливых людей из других
+культур, необходима достойная оплата труда, высокий уровень руководителей,
+справедливое отношение и приемлемые условия жизни для семей трудящихся
+специалистов. Это, конечно, общие правила для специалистов из любой области
+деятельности - не только ИТ.
