--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -120,12 +120,12 @@ categories:
 8. Замедление утечки кадров, так как навыки использования РИТ будут в большей
    степени востребованы в русскоязычном сообществе.
 
-Спорное преимущество 6 - гипотеза о возможности создания новых алгоритмов и
-моделей данных на основе русского мышления требует экспериментального и
-практического подтверждения. С научной точки зрения, подтверждение или
-опровержение этой гипотезы само по себе может являться достаточным основанием
-для проведения исследований в области языков программирования на основе русского
-языка.
+Спорное преимущество 6 основано на гипотезе о возможности создания новых
+алгоритмов и моделей данных на основе русского мышления. Эта гипотеза требует
+экспериментального и практического подтверждения. С научной точки зрения,
+подтверждение или опровержение гипотезы о русских алгоритмах и моделях данных
+само по себе может являться достаточным основанием для проведения исследований в
+области языков программирования на основе русского языка.
 
 Спорное преимущество 7 связанно с особенностями российской системы стандартов.
 Советские, а затем СНГ и российские стандарты ГОСТ с момента своего появления
