--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -64,7 +64,7 @@ categories:
 Таким образом, существует объективная потребность в создании Русскоязычных
 Информационных Технологий - РИТ.
 
-## Обоснование Предлагаемой Работы
+## Обоснование предлагаемой работы
 
 В русскоязычном интернете можно найти несколько работ посвящённых использованию
 русского языка в информатике. Эти работы можно условно разделить на
@@ -83,6 +83,8 @@ categories:
 Английскому или другим языкам, но это преимущество лежит вне технической или
 познавательной сфер.
 
+### Очевидные преимущества РИТ
+
 Позволю себе распространить своё видение преимуществ информационных технологий
 на основе русского языка на всех людей, для которых русский является родным
 языком:
@@ -99,6 +101,42 @@ categories:
 5. Уникальные информационные технологии высокого качества созданные на основе
    русского языка будут способствовать распространению русского языка среди
    иностранных специалистов.
+
+Преимущество 1 не является призванием не изучать иностранные языки. Напротив,
+изучение иностранных языков и культур значительно обогащает духовную и
+интеллектуальную жизнь человека. Также, человек владеющий несколькими языками в
+меньшей степени подвержен негативному влиянию пропаганды, рекламы и других
+способов манипуляции своим сознанием. При этом, для человека думающего по-русски
+не должно быть необходимости изучать любой иностранный язык для работы с
+информационными технологиями на любом уровне. Выбор изучаемого иностранного
+языка и глубины погружения в него должен быть индивидуальным и осознанным.
+
+Преимущество 2 связанно с возможностью применения русских слов и русской
+грамматики для выражения как фундаментальных, так и производных конструкций
+используемых при описании алгоритмов и данных. Например, язык ассемблера для
+любого современного микропроцессора содержит множество инструкций, которые
+являются аббревиатурами английского языка. Команда JNZ читается как Jump if Not
+Zero, что по русски означает Перейди если Не Ноль. Команда JNBE читается как
+Jump if Not Below or Equal, по русски&nbsp;– Перейди если Меньше или Равно. Если
+переписать приведённые команды ассемблера русскими аббревиатурами, будет ПНН или
+ПМР. Я изучал язык ассемблера до-изучения английского и потратил на запоминание
+команд значительно больше времени, чем если бы они были написаны русскими
+аббревиатурами и сокращениями.
+
+Преимущество 3 важное и его русскоязычные специалисты часто
+недооценивают. Например, при преподавании языков программирования часто
+используются имена понятий и метапеременных [1], такие как _foo_, _bar_, _baz_
+[2]. Для англоязычного человека, это образные понятия, как по звучанию, так и по
+отражению в популярной культуре и литературе. Изначально эти слова были
+использованы как имена собственные в комиксе 1930-х годов «Смоки Стовер» Билла
+Холмана [3]. Это означает, что для англоязычного человека запомнить такие
+понятия или угадать их значения при первом прочтении будет проще чем людям
+говорящим на других языках. Для меня русские имена, например такие как Илья,
+Алеша и Добрыня были бы более образными и простыми при запоминании сложных
+понятий привязываемых к этим образам.
+
+
+### Спорные преимущества РИТ
 
 Существуют определённые стереотипы связанные с русским разумом. Например,
 русский разум более склонен к теории и глубоким логическим обоснованиям. Ему не
@@ -147,3 +185,9 @@ categories:
 справедливое отношение и приемлемые условия жизни для семей трудящихся
 специалистов. Это, конечно, общие правила для специалистов из любой области
 деятельности - не только ИТ.
+
+### Список литературы
+
+2. [Метапеременная](https://ru.wikipedia.org/wiki/Метапеременная)
+2. [Foobar](https://en.wikipedia.org/wiki/Foobar)
+3. [Smokey Stover](https://en.wikipedia.org/wiki/Smokey_Stover)
