--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -90,11 +90,12 @@ categories:
 языком:
 
 1. Нет необходимости изучать иностранный язык для обмена профессиональными
-   навыками, приобретения новых знаний и обретения новых умений.
-2. Более прямое и лаконичное выражение идей и алгоритмов для людей мыслящих
-   по-русски.
-3. Возможность применения особенностей русского языка, культурных образов и
-   построения предложений при создании новых языков программирования.
+   навыками, приобретения новых знаний, освоения новых идей и обретения новых
+   умений.
+2. Более прямое и лаконичное выражение идей и алгоритмов с привязками к
+   культурным образам для людей мыслящих по-русски.
+3. Возможность применения особенностей русского языка и построения предложений
+   при создании новых языков программирования.
 4. Самобытное развитие русского языка в области информационных технологий должно
    обеспечить более образную терминологию чем принятый сейчас перевод, или
    транслитерация терминов с иностранного языка.
@@ -111,7 +112,7 @@ categories:
 информационными технологиями на любом уровне. Выбор изучаемого иностранного
 языка и глубины погружения в него должен быть индивидуальным и осознанным.
 
-Преимущество 3 важное и его русскоязычные специалисты часто
+Преимущество 2 важное и его русскоязычные специалисты часто
 недооценивают. Например, при преподавании языков программирования часто
 используются имена понятий и метапеременных [1], такие как _foo_, _bar_, _baz_
 [2]. Для англоязычного человека, это образные понятия, как по звучанию, так и по
@@ -123,7 +124,7 @@ categories:
 Алеша и Добрыня были бы более образными и простыми при запоминании сложных
 понятий привязываемых к этим образам.
 
-Преимущество 4 связанно с возможностью применения русских слов и русской
+Преимущество 3 связанно с возможностью применения русских слов и русской
 грамматики для выражения как фундаментальных, так и производных конструкций
 используемых при описании алгоритмов и данных. Например, язык ассемблера для
 любого современного микропроцессора содержит множество инструкций, которые
