--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -122,7 +122,7 @@ categories:
 понятия или угадать их значения при первом прочтении будет проще чем людям
 говорящим на других языках. Для меня русские имена, например такие как Илья,
 Алеша и Добрыня были бы более образными и простыми при запоминании сложных
-понятий привязываемых к этим образам.
+понятий привязанных к этим образам.
 
 Преимущество 3 связанно с возможностью применения русских слов и русской
 грамматики для выражения как фундаментальных, так и производных конструкций
