--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -128,13 +128,13 @@ categories:
 грамматики для выражения как фундаментальных, так и производных конструкций
 используемых при описании алгоритмов и данных. Например, язык ассемблера для
 любого современного микропроцессора содержит множество инструкций, которые
-являются аббревиатурами английского языка. Команда JNZ читается как Jump if Not
-Zero, что по русски означает Перейди если Не Ноль. Команда JNBE читается как
-Jump if Not Below or not Equal, по русски&nbsp;– Перейди если Не Меньше или не
-Равно. Если переписать приведённые команды ассемблера русскими аббревиатурами,
-будет ПНН или ПНМР. Я изучал язык ассемблера до-изучения английского и потратил
-на запоминание команд значительно больше времени и усилий, чем если бы они были
-написаны русскими аббревиатурами и сокращениями.
+являются аббревиатурами английского языка. Так, команда JNZ читается как Jump if
+Not Zero, что по русски означает Перейди если Не Ноль, а команда JNBE читается
+как Jump if Not Below or not Equal, по русски&nbsp;– Перейди если Не Меньше или
+не Равно. Если переписать приведённые команды ассемблера русскими
+аббревиатурами, будет ПНН или ПНМР. Я изучал язык ассемблера до-изучения
+английского и потратил на запоминание команд значительно больше времени и
+усилий, чем если бы они были написаны русскими аббревиатурами и сокращениями.
 
 ### Спорные преимущества РИТ
 
