--- a/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
+++ b/pages/blog/russian-language-information-technology/2023-02-03.index.ru.mdx
@@ -177,7 +177,7 @@ Not Zero, что по русски означает Перейди если Не
 систем - склонность к русского разума к универсальной стандартизации может стать
 фундаментальным преимуществом РИТ.
 
-Спорное преимущество 8 связанно с языковым барьером. Но тут нужно отметить, что
+Спорное преимущество 8 связанно с языковым барьером. Но, тут нужно отметить, что
 языковой барьер как таковой никогда не являлся непреодолимой преградой для
 эмиграции людей между странами и культурами. Поэтому, помимо РИТ, для
 предотвращения утечки кадров, а также привлечения талантливых людей из других
