--- a/pages/blog/app-singleton-pattern/2024-11-03.index.en.mdx
+++ b/pages/blog/app-singleton-pattern/2024-11-03.index.en.mdx
@@ -1,3 +1,14 @@
+---
+title: App singleton pattern in C++ vs Rust
+authors:
+  - Victor Rybynok
+draft: private
+datePublished: '2024-03-03'
+# dateUpdated: '2024-03-03'
+# ogImage: static/front-end-doom.jpg
+categories:
+  - c++, rust, patterns
+---
 
 ```C++
 #include <iostream>
